fix z-index

--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ h4 {
 
 #project {
   position: fixed;
+  z-index: 1000;
   top: 0;
   right: 0;
   width: 300px;
